Fixed alignment

--- a/stylesheets/partials/features/_accordion.scss
+++ b/stylesheets/partials/features/_accordion.scss
@@ -23,7 +23,7 @@
                 i {
                     position: relative;
                     top: 8px;
-                    width: 25px;
+                    padding-right: 10px;
                 }
             }            
         }
